hphp/test/zend/bad/ns_048.php
<?php
namespace test\ns1;

const FOO = 0;

var_dump(constant(__NAMESPACE__ . "\\FOO"));